# polars_sqlserver_ext

./: LICENSE  README.md  plugin.py  pyproject.toml
polars_sqlserver_ext/: __init__.py  _bulk_insert.py  plugin.py
tests/: conftest.py
