[project]
name = "polars-sqlserver-ext"
version = "0.1.0"
description = "Bulk insert Polars DataFrames into SQL Server efficiently 
using pytds."
authors = [{ name="Your Name", email="you@example.com" }]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = [
    "polars>=0.18",
    "pytds>=1.13",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
